# A4A

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  render.yaml  run.py
.github/workflows/: auto-pr.yml  gh-pr.yml  release.yml
a4a/: agent.py  discovery.py  run_all.py  web.py
a4a/static/: index.html
agent_4_agent/: .env.example  agent.py  deploy.py  query.py
agent_4_agent/subagents/: __init__.py  creator_agent.py  pm_final_report_agent.py  quality_reporter_agent.py  reviewer_agent.py  system_reviewer_agent.py  tool_creater_agent.py  tool_creator_agent.py
agent_4_agent/tools/: __init__.py  edit_tool.py  github_pr_tool.py
agents/angel_agent/: agent.py
agents/basil_care_agent/: agent.py
agents/basil_cultivation_agent/: agent.py
agents/dajare_generator/: agent.py  dajare.txt
animal_sound_guide/: agent.py
dark_lord_rpg/: agent.py
demon_king_agent/: agent.py
docs/: a2a_guide.md  adk_tutorial.md  architecture.md  cicd.md  deployment.md  introduction.md  setup_and_execution.md  usage.md  why_a4a.md
epic_trend_buzz_agent/: agent.py
google_forms_modifier/: __init__.py  a2a_agent.py  agent.py
most_useless_ai_agent/: a2a_agent.py  agent.py
nago_chuka_route_agent/: agent.py
okinawa_express_bus_agent/: agent.py
okinawa_hot_spring_agent/: agent.py
okinawa_soba_search_agent/: __init__.py  a2a_agent.py  agent.py
okinawa_traffic_expert/: agent.py
okinawa_travel_agent/: agent.py
okinawa_travel_guide_agent/: agent.py
palm_tree_info_agent/: agent.py
philosophy_coach/: agent.py
wake_up_call_agent/: agent.py
(+80 files in other folders)
