[project]
name = "a4a"
version = "0.2.6"
description = "This project is A4A(Agent for Agent) of T2A(Text to Agent) and aim to CoA(Chain of AI) on AOTL(AI On The Loop)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk[a2a]>=1.21.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.132.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.27.0",
    "fastapi>=0.109.0",
    "pyyaml>=6.0.3",
]
